<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_back_click"
        android:text="@string/back"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_divide" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_clear_click"
        android:text="@string/clear"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_minus" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_dot_click"
        android:text="@string/dot"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintTop_toBottomOf="@id/btn_mult" />

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLength="19"
        android:orientation="horizontal"
        android:textSize="32sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_one_click"
        android:text="@string/one"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_three_click"
        android:text="@string/three"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        app:layout_constraintTop_toBottomOf="@+id/txt_view" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_four_click"
        android:text="@string/four"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_one" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_five_click"
        android:text="@string/five"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_eight"
        app:layout_constraintEnd_toStartOf="@id/btn_six"
        app:layout_constraintStart_toEndOf="@+id/btn_four"
        app:layout_constraintTop_toBottomOf="@+id/btn_two" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_six_click"
        android:text="@string/six"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/btn_five"
        app:layout_constraintTop_toBottomOf="@+id/btn_three" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_seven_click"
        android:text="@string/seven"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_four" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_eight_click"
        android:text="@string/eight"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintStart_toEndOf="@+id/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/btn_five" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_nine_click"
        android:text="@string/nine"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_eight"
        app:layout_constraintTop_toBottomOf="@+id/btn_six" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_plus_click"
        android:text="@string/plus"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toStartOf="@+id/btn_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_zero_click"
        android:text="@string/zero"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_mult"
        app:layout_constraintEnd_toStartOf="@+id/btn_equals"
        app:layout_constraintStart_toEndOf="@+id/btn_plus"
        app:layout_constraintTop_toBottomOf="@+id/btn_eight" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_equals_click"
        android:text="@string/equals"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_zero"
        app:layout_constraintTop_toBottomOf="@+id/btn_nine" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="btn_minus_click"
        android:text="@string/minus"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        app:layout_constraintEnd_toStartOf="@+id/btn_mult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_multi_click"
        android:text="@string/multiply"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintEnd_toStartOf="@+id/btn_divide"
        app:layout_constraintStart_toEndOf="@+id/btn_minus"
        app:layout_constraintTop_toBottomOf="@+id/btn_zero" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_divide_click"
        android:text="@string/divide"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_mult"
        app:layout_constraintTop_toBottomOf="@+id/btn_equals" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="btn_two_click"
        android:text="@string/two"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        app:layout_constraintTop_toBottomOf="@+id/txt_view" />

</androidx.constraintlayout.widget.ConstraintLayout>